<?xml version="1.0" encoding="utf-8"?>

<layout
	xmlns:android="http://schemas.android.com/apk/res/android">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<EditText
			android:id="@+id/loginInput"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:maxLines="1"
			android:inputType="text"/>

		<EditText
			android:id="@+id/passwordInput"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:maxLines="1"
			android:inputType="text"/>

		<Button
			android:id="@+id/loginButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/login_login_button"/>

		<Button
			android:id="@+id/registerButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/login_register_button"/>

	</LinearLayout>
</layout>
