<?xml version="1.0" encoding="utf-8"?>

<layout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/messagesRecyclerView"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

	</LinearLayout>

</layout>
